# Mug

./: .gitignore  CHANGELOG.md  Makefile.config.in  README.md  config.h.in  configure  configure.ac
src/: Makefile
src/Example/: Makefile
src/Example/SlackMug/: Environment.h  Makefile  WelcomeMessage.h
src/Example/ThorsSlackBot/: Makefile  SlackCLI.cpp  ThorsSlackBot.h
src/Example/ThorsWebServer/: Makefile  WebServerPlugin.cpp
src/Example/WebServerMug/: Makefile  WebServerPlugin.h
src/L3/: L3.cpp  Makefile
src/L4/: L4.cpp  Makefile
src/L5/: L5.cpp  Makefile
src/Mug/: .gitignore  DLLib.cpp  DLLib.h  DLLibMap.cpp  DLLibMap.h  Makefile  Mug.h  MugArgs.cpp  MugArgs.h  MugCLA.cpp  MugCLA.h  MugConfig.h  MugPlugin.h  MugServer.cpp  MugServer.h  Server.cpp  Server.h  mug.cpp
src/Mug/test/: DLLibTest.cpp  HTTPSend.h  MugArgsTest.cpp  MugCLATest.cpp  MugServerTest.cpp  ServerTest.cpp  SlackMugPluginTest.cpp  WebServerPluginTest.cpp
src/Mug/test/data/pages/: page1
src/TestExtra/: Makefile
src/TestExtra/L3/: L3.cpp  Makefile
src/TestExtra/L4/: L4.cpp  Makefile
src/TestExtra/L5/: L5.cpp  Makefile
src/TestExtra/SlackMug/: .gitignore  Environment.cpp  Environment.h  Makefile  SlackCLI.cpp  SlackEventHandler.cpp  SlackEventHandler.h  SlackMug.cpp  SlackMug.h  WelcomeMessage.cpp  WelcomeMessage.h
src/TestExtra/WebServerMug/: .gitignore  Makefile  WebServerMug.cpp  WebServerMug.h
src/TestExtra/WebServerMug/test1/: WebServerPluginTest.cpp
src/ThorsChalice/: ChaliceArgs.cpp  ChaliceArgs.h  ChaliceCLA.cpp  ChaliceCLA.h  ChaliceConfig.h  ChaliceServer.cpp  ChaliceServer.h  DLLib.cpp  DLLib.h  Makefile  ThorsChalice.cpp
src/ThorsChalice/test/: ChaliceCLATest.cpp  ChaliceServerTest.cpp  DLLibTest.cpp
src/ThorsMug/: DLLib.cpp  DLLib.h  HTTPResponse.h  Makefile  Mug.cpp  MugArgs.cpp  MugArgs.h  MugCLA.cpp  MugCLA.h  MugConfig.h  MugPlugin.h  MugServer.cpp  MugServer.h
src/ThorsMug/test/: DLLibTest.cpp  MugArgsTest.cpp  MugCLATest.cpp  MugServerTest.cpp
src/ThorsSlack/: API.h  APIAuth.h  APIAuthRevoke.h  APIAuthTeamsList.h  APIAuthTest.h  APIBlockActions.h  APIChat.h  APIChatAppendStream.h  APIChatDelete.h  APIChatDeleteScheduledMessage.h  APIChatGetPermalink.h  APIChatMeMessage.h  APIChatMessage.h  APIChatPostEphemeral.h  APIChatPostMessage.h  APIChatSchedule.h  APIChatScheduleMessage.h  APIChatScheduledMessageList.h  APIChatScheduledMessagesList.h  APIChatStartStream.h  APIChatStopStream.h  APIChatStream.h  APIChatUnfurl.h  APIChatUpdate.h  APIChatUtil.h  APIConversationsHistory.h  APIPins.h  APIPinsAdd.h  APIPinsList.h  APIPinsRemove.h  APIReactions.h  APIReactionsAdd.h  APIReactionsGet.h  APIReactionsList.h  APIReactionsRemove.h  APIStar.h  EventCallback.h  EventCallbackMessage.h  EventCallbackPin.h  EventCallbackReaction.h  (+14 more)
src/ThorsSlack/test/: APIAuthTest.cpp  APIChatDeleteScheduledMessage.cpp  APIChatDeleteScheduledMessageTest.cpp  APIChatDeleteTest.cpp  APIChatGetPermalinkTest.cpp  APIChatMeMessageTest.cpp  APIChatMessageTest.cpp  APIChatPostEphemeralTest.cpp  APIChatPostMessageTest.cpp  APIChatScheduleMessageTest.cpp  APIChatScheduleTest.cpp  APIChatScheduledMessagesListTest.cpp  APIChatUnfurlTest.cpp  APIChatUpdateTest.cpp  APIChatUtilTest.cpp  APIPinsTest.cpp  APIReactionsTest.cpp  APIStarTest.cpp  Environment.h  Logging.cpp  QuickCheck  SlackAPI_ChatTest.cpp  SlackBlockKitTest.cpp
src/ThorsSlackBot/: .gitignore  1  Environment.h  Makefile  SlackAPI_Chat.h  SlackBlockKit.cpp  SlackBlockKit.h  SlackCLI.cpp  SlackClient.h  SlackStream.cpp  SlackStream.h  ThorsSlackBot.cpp  ThorsSlackBot.h  WelcomeMessage.cpp  WelcomeMessage.h
src/ThorsSlackCLI/: .gitignore  Environment.h  HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h  HTTPSStream.cpp  HTTPSStream.h  Makefile  SlackCLI.cpp  SlackStream.cpp  SlackStream.h
src/ThorsWebServer/: .gitignore  Makefile  WebServerPlugin.h
